On layout. css, added main element, adjusted content to be 450px wide, lowered element to avoid being clipped by header, changed bg color to white, centered using margins

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,14 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+main {
+  margin-top: 140px;
+  width: 450px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
